Plasmo Voice 1.2.X is now available for Minecraft 1.16.5. From now on we will support both 1.17.1 and 1.16.5 versions.