@@ -1,12 +1,16 @@
 package su.plo.voice.client.gui.tabs;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.hash.Hashing;
 import com.mojang.authlib.GameProfile;
 import com.mojang.authlib.minecraft.MinecraftProfileTexture;
 import com.mojang.blaze3d.platform.NativeImage;
 import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.*;
+import com.mojang.blaze3d.vertex.BufferBuilder;
+import com.mojang.blaze3d.vertex.DefaultVertexFormat;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.vertex.Tesselator;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import net.minecraft.Util;
@@ -14,9 +18,7 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.components.AbstractWidget;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.events.GuiEventListener;
-import net.minecraft.client.gui.narration.NarratableEntry;
 import net.minecraft.client.gui.screens.ConfirmLinkScreen;
-import net.minecraft.client.renderer.GameRenderer;
 import net.minecraft.client.renderer.texture.DynamicTexture;
 import net.minecraft.client.resources.language.LanguageInfo;
 import net.minecraft.locale.Language;
@@ -25,6 +27,7 @@ import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.FormattedCharSequence;
+import org.lwjgl.opengl.GL11;
 import su.plo.voice.client.VoiceClient;
 import su.plo.voice.client.gui.VoiceSettingsScreen;
 
@@ -32,7 +35,7 @@ import java.io.IOException;
 import java.util.*;
 
 public class AboutTabWidget extends TabWidget {
-    private static final Map<String, Translator> translators = Map.of(
+    private static final Map<String, Translator> translators = ImmutableMap.of(
 //            "_test", new Translator(new GameProfile(UUID.fromString("8f552657-df1d-42cd-89c6-c176e195f703"), "Apehum"), "GitHub", "https://github.com/apehum")
     );
     private final VoiceSettingsScreen parent;
@@ -47,15 +50,16 @@ public class AboutTabWidget extends TabWidget {
         if (!language.getOrDefault(((TranslatableComponent) madeBy).getKey()).contains("%s")) {
             madeBy = new TextComponent("Plasmo Voice is made by");
         }
-        this.addEntry(new CategoryEntry(madeBy, 24));
-        this.addEntry(new DeveloperEntry("KPidS", new TranslatableComponent("gui.plasmo_voice.about.huix"), "Twitch", "https://twitch.tv/kpids"));
-        this.addEntry(new DeveloperEntry("Apehum", new TranslatableComponent("gui.plasmo_voice.about.programming"), "Twitch", "https://twitch.tv/apehum"));
-        this.addEntry(new DeveloperEntry("Venterok", new TranslatableComponent("gui.plasmo_voice.about.artist"), "Twitter", "https://twitter.com/venterrok"));
+        this.addEntry(new CategoryEntry(this, madeBy, 24));
+        this.addEntry(new DeveloperEntry(this, "KPidS", new TranslatableComponent("gui.plasmo_voice.about.huix"), "Twitch", "https://twitch.tv/kpids"));
+        this.addEntry(new DeveloperEntry(this, "Apehum", new TranslatableComponent("gui.plasmo_voice.about.programming"), "Twitch", "https://twitch.tv/apehum"));
+        this.addEntry(new DeveloperEntry(this, "Venterok", new TranslatableComponent("gui.plasmo_voice.about.artist"), "Twitter", "https://twitter.com/venterrok"));
 
         LanguageInfo languageInfo = client.getLanguageManager().getSelected();
         Translator translator = translators.get(languageInfo.getCode());
         if (translator != null) {
             this.addEntry(new DeveloperEntry(
+                    this,
                     translator.getProfile().getName(),
                     new TranslatableComponent("gui.plasmo_voice.about.translator", languageInfo.getName()),
                     translator.getLink(),
@@ -66,7 +70,7 @@ public class AboutTabWidget extends TabWidget {
         if (!language.getOrDefault(((TranslatableComponent) links).getKey()).contains("%s")) {
             links = new TextComponent("Plasmo Voice on");
         }
-        this.addEntry(new CategoryEntry(links));
+        this.addEntry(new CategoryEntry(this, links));
         this.addEntry(new ListEntry(ImmutableList.of(
                 new Button(0, 0, 0, 20, new TextComponent("Github"), button -> {
                     openLink("https://github.com/plasmoapp/plasmo-voice");
@@ -126,10 +130,6 @@ public class AboutTabWidget extends TabWidget {
             return list;
         }
 
-        public List<? extends NarratableEntry> narratables() {
-            return list;
-        }
-
         @Override
         public void render(PoseStack matrices, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
             int gap = 4;
@@ -182,13 +182,9 @@ public class AboutTabWidget extends TabWidget {
         public List<? extends GuiEventListener> children() {
             return Collections.emptyList();
         }
-
-        public List<? extends NarratableEntry> narratables() {
-            return Collections.emptyList();
-        }
     }
 
-    public class DeveloperEntry extends Entry {
+    public static class DeveloperEntry extends Entry {
         public static Map<String, ResourceLocation> skins = new HashMap<>();
 
         public static void loadSkins() {
@@ -252,15 +248,16 @@ public class AboutTabWidget extends TabWidget {
         private final TextComponent nick;
         private final Component role;
         private final Button link;
+        private final Minecraft client = Minecraft.getInstance();
 
-        public DeveloperEntry(String nick, Component role, String link, String linkUrl) {
+        public DeveloperEntry(AboutTabWidget parent, String nick, Component role, String link, String linkUrl) {
             super(44);
             this.nick = new TextComponent(nick);
             this.role = role;
             this.link = new Button(0, 0, 56, 20, new TextComponent(link), button -> {
-                openLink(linkUrl);
+                parent.openLink(linkUrl);
             }, (button, matrices, mouseX, mouseY) -> {
-                AboutTabWidget.this.setTooltip(ImmutableList.of(
+                parent.setTooltip(ImmutableList.of(
                         new TextComponent(linkUrl)
                 ));
             });
@@ -269,11 +266,10 @@ public class AboutTabWidget extends TabWidget {
         public void renderBackground(int y, int x, int entryWidth, int entryHeight) {
             Tesselator tessellator = Tesselator.getInstance();
             BufferBuilder bufferBuilder = tessellator.getBuilder();
-            RenderSystem.setShader(GameRenderer::getPositionTexColorShader);
-            RenderSystem.setShaderTexture(0, BACKGROUND_LOCATION);
-            RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
+            client.getTextureManager().bind(BACKGROUND_LOCATION);
+            RenderSystem.color4f(1.0F, 1.0F, 1.0F, 1.0F);
 
-            bufferBuilder.begin(VertexFormat.Mode.QUADS, DefaultVertexFormat.POSITION_TEX_COLOR);
+            bufferBuilder.begin(GL11.GL_QUADS, DefaultVertexFormat.POSITION_TEX_COLOR);
             bufferBuilder.vertex(x, y + entryHeight, 0.0D).uv(0.0F, (float) entryHeight / 32.0F + 0)
                     .color(40, 40, 40, 255).endVertex();
             bufferBuilder.vertex(x + entryWidth, y + entryHeight, 0.0D).uv((float) entryWidth / 32.0F, (float) entryHeight / 32.0F + 0)
@@ -292,15 +288,14 @@ public class AboutTabWidget extends TabWidget {
 
             renderBackground(y, x, entryWidth, entryHeight);
 
-            RenderSystem.setShader(GameRenderer::getPositionTexShader);
-            RenderSystem.setShaderColor(1F, 1F, 1F, 1F);
-            RenderSystem.setShaderTexture(0, skins.getOrDefault(nick.getContents(), skins.get("-default")));
+            client.getTextureManager().bind(skins.getOrDefault(nick.getContents(), skins.get("-default")));
+            RenderSystem.color4f(1.0F, 1.0F, 1.0F, 1.0F);
 
             blit(matrices, x + 4, y + 4, 32, 32, 8.0F, 8.0F, 8, 8, 64, 64);
             blit(matrices, x + 4, y + 4, 32, 32, 40.0F, 8.0F, 8, 8, 64, 64);
 
-            AboutTabWidget.this.minecraft.font.drawShadow(matrices, nick, x + 40, y + 11, 16777215);
-            AboutTabWidget.this.minecraft.font.drawShadow(matrices, role, x + 40, y + 21, -5592406);
+            client.font.drawShadow(matrices, nick, x + 40, y + 11, 16777215);
+            client.font.drawShadow(matrices, role, x + 40, y + 21, -5592406);
 
             link.x = x + entryWidth - 62;
             link.y = y + 10;
@@ -308,10 +303,6 @@ public class AboutTabWidget extends TabWidget {
         }
 
         public List<? extends GuiEventListener> children() {
-            return ImmutableList.of(this.link);
-        }
-
-        public List<? extends NarratableEntry> narratables() {
             return ImmutableList.of(this.link);
         }
     }
